# MaxScale

./: CMakeLists.txt  macros.cmake
log_manager/: log_manager.cc  log_manager.h
query_classifier/: CMakeLists.txt  query_classifier.cc  query_classifier.h  table_schema.cc  table_schema.h
server/core/: CMakeLists.txt  array.c  config.c  dbusers.c  dcb.c  filter.c  modutil.c  service.c  session.c  spinlock.c
server/core/sescmd/: sescmd.c  sescmd_cursor.c  sescmd_list.c
server/core/test/: CMakeLists.txt  testarray.c  testhashiterator.c
server/include/: array.h  filter.h  service.h  sescmd.h  spinlock.h
server/modules/filter/: CMakeLists.txt  bgdfilter.c  dbfwfilter.c  mqfilter.c  namedserverfilter.c  qlafilter.c  regexfilter.c  slavelag.c  tee.c  testfilter.c  topfilter.c
server/modules/filter/bgd/: CMakeLists.txt  bgd_constants.h  bgdfilter.c  bgdrw.c  bgdrw.h  bgdutils.c  bgdutils.h
server/modules/filter/hint/: hintfilter.c
server/modules/include/: galerarouter.h  readwritesplit2.h  readwritesplitsession.h  schemarouter.h  service_connection.h  sharding_common.h  shardrouter.h
server/modules/include/common/: routeresolution.h  sescmd.h  tmptable.h  transactions.h
server/modules/monitor/: mysql_mon.c
server/modules/protocol/: mysql_client.c
server/modules/routing/: CMakeLists.txt
server/modules/routing/common/: CMakeLists.txt  routeresolution.c  sescmd.c  sescmd_cursor.c  sescmd_list.c  tmptable.c  transactions.c
server/modules/routing/galerarouter/: CMakeLists.txt  glr.c  glr_connections.c  glr_error.c  glr_routing.c
server/modules/routing/readwritesplit/: CMakeLists.txt  readwritesplit.c  rws.c  rws_routing.c  rws_session.c
server/modules/routing/schemarouter/: CMakeLists.txt  schemarouter.c  sharding_common.c  shardrouter.c  svcconn.c
utils/: skygw_utils.cc  skygw_utils.h
