if(BUILD_TOOLS)
  add_executable(tablehash glr_routing.c)
  target_compile_definitions(tablehash PRIVATE "BUILD_TOOLS")
  target_link_libraries(tablehash  ${EMBEDDED_LIB} log_manager utils query_classifier fullcore)
  install(TARGETS tablehash DESTINATION tools)
  install(FILES ${ERRMSG} DESTINATION tools)
endif()
